--- a/style.css
+++ b/style.css
@@ -25,7 +25,9 @@ td{
 }
 
 
-
+input{
+    background-color: rgb(91, 142, 172);
+}
 
 
 .tabela1{
@@ -47,10 +49,34 @@ th{
     border: 2px solid;
 }
 
+
+h2{
+    padding-top: 4rem;
+    text-align: center;
+    font-size: 30px;
+}
+
 .tabela2{
     border: 2px solid;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 6rem;
+    margin-top: 7rem;
     margin-bottom: 3rem;
+}
+
+.button-style{
+border: 2px solid;
+border-radius: 5px;
+font-size: 20px;
+font-weight: bold;
+right: 100px;
+background-color: rgb(91, 142, 172);
+}
+
+.button-position{
+    display: block;
+    position: absolute;
+    right: 910px;
+    top: 800px;
+    
 }
