--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 
 Header{
-    padding-top: 3rem;
-    padding-bottom: 5rem;
-    text-align: center;
-    font-size: 80px;
-    background: rgb(91, 142, 172);
-    color: rgba(255, 255, 255, 0.61);
-
-  
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-left: 26rem;
+    font-size: 30px;
+    
+    font-weight: bolder;
+    background: #eceae6;
+    color: #000000;
+    border-bottom: #000000 solid 2px;
+      
 }
 
+
 Body{
-    background: rgb(162, 196, 192)
+    background: #eceae6;
 }
 th{
     padding: 1rem;
@@ -26,7 +29,7 @@ td{
 
 
 input{
-    background-color: rgb(91, 142, 172);
+    background-color: #ffff;
 }
 
 
@@ -34,7 +37,7 @@ input{
     border: 2px solid;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2rem;
+    margin-top: 3rem;
 }
 
 tr{
@@ -53,7 +56,7 @@ th{
 h2{
     padding-top: 4rem;
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .tabela2{
@@ -70,13 +73,14 @@ border-radius: 5px;
 font-size: 20px;
 font-weight: bold;
 right: 100px;
-background-color: rgb(91, 142, 172);
+background-color:#e6dcc4;
+
 }
 
 .button-position{
     display: block;
     position: absolute;
-    right: 910px;
-    top: 800px;
+    right: 900px;
+    top: 700px;
     
 }
