HTML 'remover' button added, table2 moddified (removed some useless columns and added more usefull ones); CSS moddified (new button style, and table2 display:none); JS add and remove table2 function added

--- a/style.css
+++ b/style.css
@@ -67,6 +67,10 @@ h2{
     margin-bottom: 3rem;
 }
 
+#tabela-horarios-hiden{
+    display:none;
+}
+
 .button-style{
 border: 2px solid;
 border-radius: 5px;
@@ -78,6 +82,14 @@ background-color:#e6dcc4;
 }
 
 .button-position{
+    display: block;
+    position: absolute;
+    right: 1000px;
+    top: 700px;
+    
+}
+
+.button-position-remover{
     display: block;
     position: absolute;
     right: 900px;
